--- a/MongoDbTest/MongoDbTest/MongoDbTest.csproj
+++ b/MongoDbTest/MongoDbTest/MongoDbTest.csproj
@@ -9,7 +9,9 @@
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="3.4.0" />
     <PackageReference Include="MongoDB.Driver.Core" Version="2.30.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.6" />
   </ItemGroup>
 
 </Project>
